[tool.poetry]
name = "quickstart-selenium-python"
version = "0.1.0"
description = ""
authors = ["Anirudh Kamath <anirudh@browserbase.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.26.1"
browserbase = "*"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
